--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "sw-toolbox",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "license": "Apache-2.0",
+  "main": "lib/sw-toolbox.js",
   "scripts": {
     "test": "gulp test"
   },
@@ -11,13 +12,13 @@
     "gulp": "^3.8.10",
     "gulp-jshint": "^1.9.0",
     "jshint-stylish": "^1.0.0",
-    "path-to-regexp": "^1.0.1",
     "qunitjs": "^1.18.0",
-    "serviceworker-cache-polyfill": "coonsta/cache-polyfill",
     "vinyl-source-stream": "^1.0.0"
   },
   "dependencies": {
     "browserify-header": "^0.9.2",
-    "minifyify": "^6.4.0"
+    "minifyify": "^6.4.0",
+    "serviceworker-cache-polyfill": "coonsta/cache-polyfill",
+    "path-to-regexp": "^1.0.1"
   }
 }
